--- a/package.json
+++ b/package.json
@@ -1,31 +1,26 @@
 {
-  "name": "generator-aui",
-  "version": "0.0.0",
-  "description": "Yeoman generator",
-  "license": "MIT",
-  "main": "app/index.js",
-  "repository": "alloyui/generator-aui",
-  "author": {
-    "name": "AlloyUI",
-    "email": "",
-    "url": "https://github.com/alloyui"
-  },
-  "scripts": {
-    "test": "mocha"
-  },
-  "files": [
-    "generators"
-  ],
-  "keywords": [
-    "yeoman-generator"
-  ],
-  "dependencies": {
-    "chalk": "^1.0.0",
-    "lodash": "^3.9.3",
-    "yeoman-generator": "^0.19.0",
-    "yosay": "^1.0.2"
-  },
-  "devDependencies": {
-    "mocha": "*"
-  }
+	"name": "generator-metal",
+	"version": "0.0.0",
+	"description": "Yeoman generator",
+	"license": "MIT",
+	"main": "app/index.js",
+	"repository": "metal/generator-metal",
+	"scripts": {
+		"test": "mocha"
+	},
+	"files": [
+		"generators"
+	],
+	"keywords": [
+		"yeoman-generator"
+	],
+	"dependencies": {
+		"chalk": "^1.0.0",
+		"lodash": "^3.9.3",
+		"yeoman-generator": "^0.19.0",
+		"yosay": "^1.0.2"
+	},
+	"devDependencies": {
+		"mocha": "*"
+	}
 }
