--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
 	"name": "generator-metal",
-	"version": "0.0.0",
-	"description": "Yeoman generator",
+  "version": "0.2.2",
+  "description": "Yeoman generator for Metal.js components",
 	"license": "MIT",
 	"main": "app/index.js",
 	"repository": "metal/generator-metal",
 	"scripts": {
 		"test": "mocha"
 	},
-	"files": [
-		"generators"
-	],
 	"keywords": [
+		"metal",
 		"yeoman-generator"
 	],
 	"dependencies": {
