--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "generator-metal-webpack",
-  "version": "1.0.0",
+  "name": "generator-metal",
+  "version": "3.1.1",
   "description": "Yeoman generator for Metal.js components",
   "license": "MIT",
   "main": "app/index.js",
-  "repository": "fernandosouza/generator-metal",
+  "repository": "metal/generator-metal",
   "scripts": {
     "test": "mocha"
   },
